@@ -6,8 +6,14 @@
 package org.geoserver.catalog.impl;
 
 import com.thoughtworks.xstream.XStream;
-import java.io.*;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.ObjectInputStream;
+import java.io.ObjectStreamClass;
+import java.io.Serializable;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
@@ -60,10 +66,10 @@ class ModificationProxyCloner {
      * Best effort object cloning utility, tries different lightweight strategies, then falls back
      * on copy by XStream serialization (we use that one as we have a number of hooks to avoid deep
      * copying the catalog, and re-attaching to it, in there)
-     *
-     * @param source
      */
-    static <T> T clone(T source) {
+    static <T> T clone(T source)
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException,
+                    InvocationTargetException {
         // null?
         if (source == null) {
             return null;
@@ -97,6 +103,14 @@ class ModificationProxyCloner {
         // to avoid reflective access warnings
         if (source instanceof TimeZone) {
             return (T) ((TimeZone) source).clone();
+        }
+
+        if (source instanceof Map) {
+            return (T) cloneMap((Map<?, ?>) source, true);
+        }
+
+        if (source instanceof Collection) {
+            return (T) cloneCollection((Collection<?>) source, true);
         }
 
         // is it cloneable?
@@ -144,9 +158,8 @@ class ModificationProxyCloner {
 
     static <T extends Serializable> T cloneSerializable(T source) {
         byte[] bytes = SerializationUtils.serialize(source);
-        try {
-            ObjectInputStream input =
-                    new ModProxyObjectInputStream(new ByteArrayInputStream(bytes));
+        try (ObjectInputStream input =
+                new ModProxyObjectInputStream(new ByteArrayInputStream(bytes))) {
             return (T) input.readObject();
         } catch (Exception e) {
             throw new RuntimeException("Error cloning serializable object", e);
@@ -198,22 +211,20 @@ class ModificationProxyCloner {
     /**
      * Shallow or deep copies the provided collection
      *
-     * @param source
      * @param deepCopy If true, a deep copy will be done, otherwise the cloned collection will
      *     contain the exact same objects as the source
-     * @throws InstantiationException
-     * @throws IllegalAccessException
      */
     public static <T> Collection<T> cloneCollection(Collection<T> source, boolean deepCopy)
-            throws InstantiationException, IllegalAccessException {
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException,
+                    InvocationTargetException {
         if (source == null) {
             // nothing to copy
             return null;
         }
         Collection<T> copy;
         try {
-            copy = source.getClass().newInstance();
-        } catch (InstantiationException e) {
+            copy = source.getClass().getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             // we'll just pick something
             if (source instanceof Set) {
                 copy = new HashSet<T>();
@@ -238,19 +249,17 @@ class ModificationProxyCloner {
      *
      * @param <K>
      * @param <V>
-     * @param source
      * @param deepCopy If true, a deep copy will be done, otherwise the cloned collection will
      *     contain the exact same objects as the source
-     * @throws InstantiationException
-     * @throws IllegalAccessException
      */
     public static <K, V> Map<K, V> cloneMap(Map<K, V> source, boolean deepCopy)
-            throws InstantiationException, IllegalAccessException {
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException,
+                    InvocationTargetException {
         if (source == null) {
             // nothing to copy
             return null;
         }
-        Map<K, V> copy = source.getClass().newInstance();
+        Map<K, V> copy = source.getClass().getDeclaredConstructor().newInstance();
         if (deepCopy) {
             for (Map.Entry<K, V> entry : source.entrySet()) {
                 K keyCopy = clone(entry.getKey());
