@@ -21,11 +21,7 @@ public class DecimalConverter extends DoubleConverter {
 
     int maximumFractionDigits = 16;
 
-    /**
-     * Returns the maximum number of fraction digits allowed in the configuration
-     *
-     * @return
-     */
+    /** Returns the maximum number of fraction digits allowed in the configuration */
     public int getMaximumFractionDigits() {
         return maximumFractionDigits;
     }
@@ -42,11 +38,11 @@ public class DecimalConverter extends DoubleConverter {
         final NumberFormat format = getNumberFormat(locale);
         final DecimalFormatSymbols symbols = ((DecimalFormat) format).getDecimalFormatSymbols();
         if (value.equals(symbols.getNaN())) {
-            return new Double(Double.NaN);
+            return Double.valueOf(Double.NaN);
         } else if (value.equals(symbols.getInfinity())) {
-            return new Double(Double.POSITIVE_INFINITY);
+            return Double.valueOf(Double.POSITIVE_INFINITY);
         } else if (value.equals("-" + symbols.getInfinity())) {
-            return new Double(Double.NEGATIVE_INFINITY);
+            return Double.valueOf(Double.NEGATIVE_INFINITY);
         } else {
             return super.convertToObject(value, locale);
         }
